Added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
         {{>header}}
 
         <img class="portrait" src="/images/face.png">
-        {{!-- <p>Created by {{name}}</p> --}}
+        <p>Created by Nate OS using mapbox and darksky apis</p>
         </div>
         
         
